# textrepo-client-python

./: .gitignore  .gitlab-ci.yml  .travis.yml  CONTRIBUTING.md  LICENSE  Makefile  README.md  USAGE.md  autogenerate.sh  poetry_scripts.py  pyproject.toml  requirements.txt  setup.py  swagger.json  textrepo-api.json  tox.ini
.github/workflows/: python-package.yml
.openapi-generator/: FILES
docs/: AboutApi.md  Body.md  Body1.md  Chronology.md  ContentsApi.md  DashboardApi.md  Document.md  DocumentsApi.md  FilesApi.md  FindApi.md  FormDocument.md  FormTextRepoFile.md  FormType.md  FormVersion.md  ImportApi.md  IndexApi.md  LocalDateTime.md  MetadataApi.md  RegisterApi.md  ResultAbout.md  ResultAboutVersion.md  ResultDocument.md  ResultDocumentsOverview.md  ResultIndexer.md  ResultIndexerFieldsConfiguration.md  ResultPage.md  ResultPageParams.md  ResultPageResultDocument.md  ResultTextRepoFile.md  ResultType.md  ResultVersion.md  TaskApi.md  TypesApi.md  VersionsApi.md  index.rst  requirements.txt  usage.rst
integrationtests/: textrepo_client_integration_test.py
test/: test_about_api.py  test_body.py  test_body1.py  test_chronology.py  test_contents_api.py  test_dashboard_api.py  test_document.py  test_documents_api.py  test_files_api.py  test_find_api.py  test_form_document.py  test_form_text_repo_file.py  test_form_type.py  test_form_version.py  test_import_api.py  test_index_api.py  test_input_stream.py  test_local_date_time.py  test_metadata_api.py  test_register_api.py  test_result_about.py  test_result_about_version.py  test_result_document.py  test_result_documents_overview.py  test_result_indexer.py  test_result_indexer_fields_configuration.py  test_result_page.py  test_result_page_params.py  test_result_page_result_document.py  test_result_text_repo_file.py  test_result_type.py  test_result_version.py  test_something.py  test_task_api.py  test_types_api.py  test_versions_api.py
tests/: textrepo_client_test.py
textrepo/: __init__.py  client.py
textrepo_client/: __init__.py  api_client.py  configuration.py  exceptions.py  model_utils.py  rest.py
textrepo_client/api/: __init__.py  about_api.py  contents_api.py  (+11 more)
(+40 files in other folders)
