[tool.poetry]
name = "textrepo-client"
version = "0.5.0"
description = "Python client to access textrepo"
authors = ["Bram Buitendijk <bram.buitendijk@di.huc.knaw.nl>", "Hayco de Jong <hayco.de.jong@di.huc.knaw.nl>"]
license = "MIT"
readme = "README.md"
repository = 'https://github.com/knaw-huc/textrepo-client-python'
packages = [{ include = "textrepo" }]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = "^3.7"
dataclasses-json = "^0.5.7"
marshmallow = "^3.15.0"
python-dateutil = "2.8.1"
requests = "^2.27.1"
icecream = "^2.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/brambg/annorepo-python-client/issues"

[tool.poetry.scripts]
version = 'poetry_scripts:version'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
